--- a/frontend/src/pages/Links/Links.module.css
+++ b/frontend/src/pages/Links/Links.module.css
@@ -17,6 +17,10 @@
     flex-direction: column;
     padding-top: 0.5rem;
 }
+.scroll {
+    width: 100%;
+    justify-items: center;
+}
 .tableContainer {
   width: 94%;
   border-collapse: collapse;
@@ -173,15 +177,6 @@
   .remarkContainer:hover .fullRemark {
     display: block;
   }
-  
-  @media (max-width: 768px) {
-    .fullRemark {
-      left: 50%;
-      transform: translateX(-50%);
-      width: 90vw;
-      max-width: 300px;
-    }
-  }
   .noLinksMessage {
     display: flex;
     justify-content: center;
@@ -194,3 +189,76 @@
     padding: 20px;
   }
   
+  @media (max-width: 768px) {
+    .fullRemark {
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90vw;
+      max-width: 300px;
+    }
+    .createdAt {
+        min-width: 120px;
+      }
+    .container {
+        overflow-x: hidden;
+        background-color: #f1f1f1;
+    }
+    /* .tableContainer {
+      width: 500px;
+    } */
+    .scroll {
+        all: unset;
+        width: 650px;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        padding: 0px 10px;
+    }
+    .scroll::-webkit-scrollbar {
+        height: 8px; /* Set the height for horizontal scrollbar */
+    }
+    .scroll::-webkit-scrollbar-track {
+        background: grey; /* Make the track transparent to remove default scrollbar icons */
+    }
+    .scroll::-webkit-scrollbar-thumb {
+        background: #ffffff;
+        border-radius: 50px;
+    }
+      
+  }
+ 
+  @media (max-width: 368px) {
+    .fullRemark {
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90vw;
+      max-width: 300px;
+    }
+    .createdAt {
+        min-width: 120px;
+      }
+    .container {
+        overflow-x: hidden;
+    }
+    .tableContainer {
+      width: 500px;
+    }
+    .scroll {
+        all: unset;
+        width: 350px;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        padding: 0px 10px;
+        /* background-color: red; */
+    }
+    .scroll::-webkit-scrollbar {
+        height: 8px; /* Set the height for horizontal scrollbar */
+    }
+    .scroll::-webkit-scrollbar-track {
+        background: grey; /* Make the track transparent to remove default scrollbar icons */
+    }
+    .scroll::-webkit-scrollbar-thumb {
+        background: #ffffff;
+        border-radius: 50px;
+    }
+      
+  }
