--- a/frontend/src/Components/MobileNavbar/MobileNavbar.module.css
+++ b/frontend/src/Components/MobileNavbar/MobileNavbar.module.css
@@ -61,6 +61,7 @@
     padding-left: 2.5rem;
     border: 1px solid #e5e7eb;
     border-radius: 0.5rem;
+    /* background-color: red; */
   }
   
   .searchInput:focus {
@@ -75,6 +76,7 @@
     top: 50%;
     transform: translateY(-50%);
     color: #9ca3af;
+    padding-top: 2px;
   }
   .menuContainer {
     height: 78vh;
@@ -142,7 +144,7 @@
  .searchInput {
     width: 100%;
     height: 100%;
-    padding: 12px 8px;
+    padding: 10px 8px;
     /* background-color: red; */
     text-align: start;
     padding-left: 30px;
@@ -150,7 +152,7 @@
  .menuContent {
     /* width: 17vw; */
     /* background: brown; */
-    height: 60vh;
+    height: 70vh;
     padding-top: 10vh;
     display: flex;
     flex-direction: column;
