--- a/frontend/src/Components/MobileNavbar/MobileNavbar.module.css
+++ b/frontend/src/Components/MobileNavbar/MobileNavbar.module.css
@@ -56,12 +56,11 @@
   }
   
   .searchInput {
-    width: 100%;
+    width: 280px;
     padding: 0.5rem 0.75rem;
-    padding-left: 2.5rem;
+    padding-left: 1.8rem;
     border: 1px solid #e5e7eb;
     border-radius: 0.5rem;
-    /* background-color: red; */
   }
   
   .searchInput:focus {
@@ -76,7 +75,7 @@
     top: 50%;
     transform: translateY(-50%);
     color: #9ca3af;
-    padding-top: 2px;
+
   }
   .menuContainer {
     height: 78vh;
@@ -138,17 +137,18 @@
     justify-content: center;
     gap: 8px;
     cursor: pointer;
-    /* background-color: red; */
  }
 
  .searchInput {
     width: 100%;
     height: 100%;
-    padding: 10px 8px;
-    /* background-color: red; */
+    padding: 16px 8px;
     text-align: start;
-    padding-left: 30px;
+    padding-left: 34px;
  }
+ .searchInput::placeholder { /* Modern browsers */
+    font-size: 16px;
+}
  .menuContent {
     /* width: 17vw; */
     /* background: brown; */
@@ -221,4 +221,8 @@
  }
 .logout {
 
+}
+.loader {
+    width: 100vw;
+    height: 100vh;
 }
