--- a/frontend/src/Components/Navbar/Navbar.module.css
+++ b/frontend/src/Components/Navbar/Navbar.module.css
@@ -110,22 +110,23 @@
     border: none;
     outline: none;
     background: transparent;
-    margin-left: 8px;
+    margin-left: 0px;
     width: 100%;
-    
   }
+  .searchInput::placeholder { /* Modern browsers */
+    font-size: 16px;
+}
   
   .search {
     display: flex;
     align-items: center;
-    padding: 8px 16px;
+    padding: 10px 16px;
     background: #f5f5f5;
     border-radius: 8px;
-    width: 220px;
+    width: 240px;
     height: 44px;
     position: relative;
-    font-size: 24px;
-    
+    font-size: 18px;
   }
   /* Navbar.module.css */
 .searchPage {
