--- a/frontend/src/pages/LogIn/LogIn.module.css
+++ b/frontend/src/pages/LogIn/LogIn.module.css
@@ -87,7 +87,7 @@
   
   .formGroup input {
     width: 100%;
-    padding: 0.75rem 1rem;
+    padding: 0.5rem 1rem;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 1rem;
@@ -145,4 +145,42 @@
   .loader {
     width: 100vw;
     height: 100vh;
+  }
+  @media (max-width: 768px) {
+    .heroImg {
+      display: none;
+    }
+  }
+  @media (max-width: 400px) {
+    .heroImg {
+      display: none;
+    }
+    .heroSection {
+      padding: 2rem;
+    }
+    
+    .nav {
+      top: 1rem;
+      right: 1.5rem;
+      width: 100%;
+      margin-bottom: 2rem;
+      gap: 1rem;
+    }
+  
+    .heading {
+      color: #3B3C51;
+      font-size: 20px;
+      font-weight: 600;
+      padding-top: 2rem;
+      padding-bottom: 6.5rem;
+    }
+    
+    .form {
+      /* background-color: red; */
+      padding: 0.3rem;
+      width: 94%;
+    }
+    .formGroup {
+      margin-bottom: 1.5rem;
+    }
   }
