--- a/frontend/src/Components/MobileNavbar/MobileNavbar.module.css
+++ b/frontend/src/Components/MobileNavbar/MobileNavbar.module.css
@@ -226,3 +226,14 @@
     width: 100vw;
     height: 100vh;
 }
+.clearSearch {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    color: #666;
+  }
