--- a/frontend/src/Components/Sidebar/Sidebar.module.css
+++ b/frontend/src/Components/Sidebar/Sidebar.module.css
@@ -8,6 +8,7 @@
     align-items: center;
     gap: 1px;
     /* z-index: 110; */
+    /* position: relative */
 }
 .dashboard, .links, .analytics, .settings {
     all:unset;
