--- a/frontend/src/Components/MobileNavbar/MobileNavbar.module.css
+++ b/frontend/src/Components/MobileNavbar/MobileNavbar.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     background-color: white;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    /* background-color: red; */
   }
   
   .topSection {
@@ -106,7 +107,7 @@
     font-weight: bold;
   }
   .formatDateAndTime {
-    line-height: 16px;
+    line-height: 14px;
     color: #878BA9;
     font-size: 12px;
     padding-left: 2px;
